# crewai_application_tracking_sys

./: .gitignore  README.md  pyproject.toml
src/hr_application_tracking_system/: crew.py  hr_types.py  main.py  main_flow.py
src/hr_application_tracking_system/crews/hr_aggregate_score_crew/: hr_aggregate_score_crew.py
src/hr_application_tracking_system/crews/hr_aggregate_score_crew/config/: agents.yaml  tasks.yaml
src/hr_application_tracking_system/crews/hr_jd_parser_crew/: hr_jd_parser_crew.py
src/hr_application_tracking_system/crews/hr_jd_parser_crew/config/: agents.yaml  tasks.yaml
src/hr_application_tracking_system/crews/hr_responser_crew/config/: agents.yaml  tasks.yaml
src/hr_application_tracking_system/crews/hr_score_crew/: hr_score_crew.py
src/hr_application_tracking_system/crews/hr_score_crew/config/: agents.yaml  tasks.yaml
src/hr_application_tracking_system/crews/hr_summary_crew/: hr_sumary_crew.py
src/hr_application_tracking_system/data/jd/: data_scientist_BNPL.docx
src/hr_application_tracking_system/data/output/: summary_jd.txt  summary_resumes.txt
src/hr_application_tracking_system/data/resumes/: Carlos Mendez.docx  David Thompson.docx  Emili Chen.docx  Maria Gonzalez.docx
src/hr_application_tracking_system/output/: results.txt
src/hr_application_tracking_system/output_jd/: summary_jd.txt
src/hr_application_tracking_system/output_resumes/: summary_resumes.txt
src/hr_application_tracking_system/tools/: combine_scores.py  custom_tool.py  read_resume_file.py  save_csv_file.py
(+2 files in other folders)
