[project]
name = "hr_application_tracking_system"
version = "0.1.0"
description = "hr-application-tracking-system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "onnxruntime>=1.21.0",
]

[project.scripts]
hr_application_tracking_system = "hr_application_tracking_system.main:run"
run_crew = "hr_application_tracking_system.main:run"
train = "hr_application_tracking_system.main:train"
replay = "hr_application_tracking_system.main:replay"
test = "hr_application_tracking_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
